Added orders manager portals settings and much more

--- a/customer-home.html
+++ b/customer-home.html
@@ -21,7 +21,7 @@
       <ul>
         <li><a href="customer-home.html">Home</a></li>
         <li><a href="menu.html">Menu</a></li>
-        <li><a href="order.html">Order</a></li>
+        <li><a href="customer-order.html">Your Orders</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="customer-login.html">Logout</a></li>
       </ul>
